updates -- spacing issues

--- a/css/custom.css
+++ b/css/custom.css
@@ -5,7 +5,9 @@
 
 /* GLOBAL SETTINGS */
 
-
+a:hover {
+	text-decoration: none;
+}
 
 body{
 	font-family: 'Lato' sans-serif;
@@ -69,13 +71,25 @@ p{
  
 @media screen and (max-width: 568px) {
     h3 {
-        font-size:0.8em;
+        font-size:1em;
     }
 }
 
 @media screen and (max-width: 568px) {
     h2 {
-        font-size:1.1em;
+        font-size:1.5em;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    h1 {
+        font-size:3em;
+    }
+}
+
+@media screen and (max-width: 568px) {
+    .bigtext {
+        font-size:32px;
     }
 }
 
